# my-service-bus-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.rs
.github/workflows/: release.yaml  release.yml
files/: app.css
public/assets/: app.css
src/: main.rs  router.rs  settings.rs  utils.rs
src/api/: mod.rs
src/app_ctx/: app_ctx.rs  cached_data.rs  update_timer.rs
src/models/: mod.rs  page_api_model.rs  queue_frame_api_model.rs  request_api_model.rs  subscriber_api_model.rs  topic_api_model.rs  topic_queue_api_model.rs
src/server/: mod.rs  settings.rs
src/server/app_ctx/: app_ctx.rs  cached_data.rs  mod.rs  update_timer.rs
src/states/: dialog_state.rs  main_state.rs  mod.rs  page_api_model.rs  queue_frame_api_model.rs  request_api_model.rs  session_api_model.rs  status_bar_state.rs  subscriber_api_model.rs  topic_api_model.rs  topic_publisher_api_model.rs  topic_queue_api_model.rs
src/views/: icons.rs  menu_panel.rs  mod.rs  render_connections.rs  render_graph.rs  render_message_id.rs  render_page.rs  render_queues.rs  render_subscriber.rs  render_topic_connections.rs  render_topics_and_queues.rs  status_bar_widget.rs
src/views/dialogs/: confirmation_dialog.rs  dialog_template.rs  mod.rs  render.rs
