[package]
name = "my-sb-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ssr"]
ssr = [
    "dioxus-fullstack/axum",
    "rust-extensions",
    "my-logger",
    "async-trait",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",
    "flurl",
    "tokio/full",

]
web = ["dioxus-fullstack/web"]

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
], optional = true }
my-logger = { tag = "1.0.3", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

dioxus-fullstack = { version = "*", features = ["router"] }

dioxus-router-macro = "*"
dioxus-router = "*"
dioxus = { version = "*" }
dioxus-web = { version = "*" }
serde = "*"


dioxus-free-icons = { path = "./libs/icon-packages/lib", features = [
    "bootstrap",
    "ionicons",
] }

tokio = { version = "*", features = ["time", "rt"] }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
flurl = { tag = "0.4.1", git = "https://github.com/MyJetTools/fl-url.git", optional = true }
