[package]
name = "my-sb-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [
    "dioxus/server",
    "rust-extensions",
    "my-logger",
    "async-trait",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",
    "flurl",
    "tokio",
    "my-settings-reader",
    "dioxus-utils/server",

]
web = ["dioxus/web"]

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
], optional = true }


my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

dioxus = { version = "0.6", features = ["fullstack", "router"] }

dioxus-utils = { tag = "0.6.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "fullstack",
] }

serde = "*"

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "with-ssh",
], optional = true }
tokio = { version = "*", optional = true }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", optional = true }

[dev-dependencies]
serde_json = "*"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
